# LIFE-SIgnal-sherlock-IQ

./: .env.example  .gitignore  Dockerfile  pyproject.toml
.actor/: README.md
QGI-demo/: INSTALL.md  README.md
QGI-demo/docs/: security-hygiene.md  wire-into-loan-detail.md
QGI-demo/qwork-overlay/: .env.qgi.example
QGI-demo/qwork-overlay/src/vertical/components/: SocialConsentDialog.tsx  SocialDiscoveryPanel.tsx  SocialVerificationTab.tsx
QGI-demo/qwork-overlay/src/vertical/lib/: lsiqClient.ts  qgiAgents.ts  socialConsent.ts
QGI-demo/qwork-overlay/supabase/migrations/: 20260620_qgi_social_verification.sql
QGI-demo/scripts/: rotate-qwork-secrets.sh
docs/: README.md  plan-second-look-underwriting.md  qwork-integration-notes.md
docs/pyproject/: README.md
sherlock_project/: __init__.py  __main__.py  sherlock.py
sherlock_project/web/: __init__.py  app.py  cli.py
sherlock_project/web/qss/: __init__.py  base.py  registry.py  scorecard.py  stub.py
sherlock_project/web/static/: app.css  app.js
sherlock_project/web/templates/: index.html
tests/qgi_demo/: test_scorecard_invariants.py
