[build-system]
requires = [ "poetry-core>=1.2.0" ]
build-backend = "poetry.core.masonry.api"
# poetry-core 1.8 not available in .fc39. Can upgrade to 1.8.0 at .fc39 EOL

[tool.poetry-version-plugin]
source = "init"

[tool.poetry]
name = "sherlock-project"
version = "0.16.0"
description = "QGI Life-Signals-IQ (soft rebrand of Sherlock) — hunt down social media accounts by username across social networks"
license = "MIT"
authors = [
    "Siddharth Dushantha <siddharth.dushantha@gmail.com>"
]
maintainers = [
    "Paul Pfeister <code@pfeister.dev>",
    "Matheus Felipe <matheusfelipeog@protonmail.com>",
    "Sondre Karlsen Dyrnes <sondre@villdyr.no>"
]
readme = "docs/pyproject/README.md"
packages = [ { include = "sherlock_project"} ]
keywords = [ "osint", "reconnaissance", "information gathering" ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security"
]
homepage = "https://sherlockproject.xyz/"
repository = "https://github.com/sherlock-project/sherlock"


[tool.poetry.urls]
"Bug Tracker" = "https://github.com/sherlock-project/sherlock/issues"

[tool.poetry.dependencies]
python = "^3.9"
certifi = ">=2019.6.16"
colorama = "^0.4.1"
PySocks = "^1.7.0"
requests = "^2.22.0"
requests-futures = "^1.0.0"
stem = "^1.8.0"
pandas = "^2.2.1"
openpyxl = "^3.0.10"
tomli = "^2.2.1"
fastapi = { version = "^0.115.0", optional = true }
uvicorn = { version = "^0.30.0", optional = true, extras = ["standard"] }
jinja2 = { version = "^3.1.0", optional = true }

[tool.poetry.extras]
web = ["fastapi", "uvicorn", "jinja2"]

[tool.poetry.group.dev.dependencies]
jsonschema = "^4.0.0"
rstr = "^3.2.2"
pytest = "^8.4.2"
pytest-xdist = "^3.8.0"


[tool.poetry.group.ci.dependencies]
defusedxml = "^0.7.1"

[tool.poetry.scripts]
sherlock = 'sherlock_project.sherlock:main'
qgi-life-signals-iq = 'sherlock_project.sherlock:main'
life-signals-iq = 'sherlock_project.sherlock:main'
qgi-life-signals-iq-web = 'sherlock_project.web.cli:main'
life-signals-iq-web = 'sherlock_project.web.cli:main'
